brac food/money added

--- a/App.Web/Views/Shared/_LayoutMain.cshtml
+++ b/App.Web/Views/Shared/_LayoutMain.cshtml
@@ -61,13 +61,15 @@
                                 <li>
                                     <a class="charts" href="javascript:void(0)" title="Standing Data"><span>Standing Data</span></a>
                                     <ul class="dropdown">
+                                        <li><a class="charts" href="~/Standing/Index/@StandingDataTypes.TreeMessage" title="Restrictions"><span>COVID Circular</span></a></li>
+                                        <li><a class="charts" href="~/Standing/Index/@StandingDataTypes.Activities" title="Activities"><span>Activities</span></a></li>
                                         <li><a class="charts" href="~/Standing/Index/@StandingDataTypes.Programs" title="Programs"><span>Programs</span></a></li>
                                         <li><a class="charts" href="~/Standing/Index/@StandingDataTypes.HowProgramsAffected" title="Impacted/Affected"><span>Impacted/Affected</span></a></li>
                                         <li><a class="charts" href="~/Standing/Index/@StandingDataTypes.CommunicationMaterial" title="Communication Materials"><span>Comm Materials</span></a></li>
                                         <li><a class="charts" href="~/Standing/Index/@StandingDataTypes.CommunicationChannel" title="Communication Channels"><span>Comm Channels</span></a></li>
-                                        <li><a class="charts" href="~/Standing/Index/@StandingDataTypes.MaterialsOrItems" title="Materials"><span>Materials</span></a></li>
-                                        <li><a class="charts" href="~/Standing/Index/@StandingDataTypes.Activities" title="Activities"><span>Activities</span></a></li>
+                                        <li><a class="charts" href="~/Standing/Index/@StandingDataTypes.MaterialsOrItems" title="Materials"><span>Materials</span></a></li>                                        
                                         <li><a class="charts" href="~/Standing/Index/@StandingDataTypes.RestrictionsOnProgramImplementation" title="Restrictions"><span>Restrictions</span></a></li>
+                                        
                                     </ul>
                                 </li>
                             }
