--- a/App.Web/Views/Standing/Create.cshtml
+++ b/App.Web/Views/Standing/Create.cshtml
@@ -25,7 +25,7 @@
                 Name
             </td>*@
             <td class="control">
-                @Html.TextBoxFor(model => model.Name, new {@style="width:800px;" })
+                @Html.TextAreaFor(model => model.Name, new { @style = "width:100%;"})
                 @Html.ValidationMessageFor(model => model.Name)
             </td>
         </tr>
