--- a/App.Web/Content/css/brac/bundle.css
+++ b/App.Web/Content/css/brac/bundle.css
@@ -12329,7 +12329,10 @@ body {
     border-bottom: 1px solid #e6e4e5;
     font-size: 12px;
 }
-
+.reports .report-item span {
+    display: inline-block;
+    width: 80%;
+}
 @media screen and (max-width: 991px) {
     .img-number-text-item img {
         width: 100px;
