--- a/App.Web/Content/css/brac/site.css
+++ b/App.Web/Content/css/brac/site.css
@@ -1,4 +1,20 @@
-body {
-    font-family: 'Roboto', sans-serif !important;
-    color: #2C2C2C;
+.dropdown-menu.show {
+    display: block;
+    min-width: 400px;
+    padding: 10px;
+    z-index: 100000;
+}
+#divactivities > li {
+    display: block;
+    width: 100%;
+    padding: 0.25rem 1.5rem;
+    clear: both;
+    font-weight: 400;
+    color: #212529;
+    text-align: inherit;
+    white-space: nowrap;
+    background-color: transparent;
+    border: 0;
+    border-bottom: 1px solid #e6e4e5;
+    font-size: 12px;
 }
