Text change middle pannel

--- a/App.Web/Views/Main/Dashboard.cshtml
+++ b/App.Web/Views/Main/Dashboard.cshtml
@@ -159,35 +159,35 @@
                     <img class="sm-34" src="@Url.Content("~/Content/src/images/svg/leaflet.svg")" alt="Leaflet">
                     <strong>@Model.DashboardModelHnpps.Leaflet</strong>
                     <p>
-                        <span>লিফলেট বিতরণ</span>
+                        <span>Leaflets</span>
                     </p>
                 </div>
                 <div class="img-number-text-item">
                     <img src="@Url.Content("~/Content/src/images/svg/sticker.svg")" alt="Sticker">
                     <strong>@Model.DashboardModelHnpps.Sticker</strong>
                     <p>
-                        <span>স্টিকার বিতরণ</span>
+                        <span>Stickers</span>
                     </p>
                 </div>
                 <div class="img-number-text-item">
                     <img class="sm-34" src="@Url.Content("~/Content/src/images/svg/festoon.svg")" alt="Leaflet">
                     <strong>@Model.DashboardModelBracs.Festun</strong>
                     <p>
-                        <span>ফেস্টুন</span>
+                        <span>Festoon</span>
                     </p>
                 </div>
                 <div class="img-number-text-item">
                     <img src="@Url.Content("~/Content/src/images/svg/miking.svg")" alt="Sticker">
                     <strong>@Model.DashboardModelBracs.Miking</strong>
                     <p>
-                        <span>মাইকিং</span>
+                        <span>Miking</span>
                     </p>
                 </div>
             </div>
             <a target="_blank" href="~/Main/BracDashboard" class="view-in-deatils">View in deatils</a>
         </div>
         <div class="overview-box-wrapper box-shadow">
-            <h6 class="header-title text-center">Hygiene Kits and PPE distribution by BRAC</h6>
+            <h6 class="header-title text-center">Hygiene Products and Protective Wear distribution by BRAC</h6>
             <div class="overview-box">
                 <div class="img-number-text-item">
                     <img class="sm-34" src="@Url.Content("~/Content/src/images/svg/sanitizer.svg")" alt="Sanitizer">
@@ -224,7 +224,7 @@
             <h6 class="table-box-title">
                 <span>
                     <img class="mr-2 carret" src="@Url.Content("~/Content/src/images/svg/report.svg")" alt="arrow-down">
-                    <strong>Report</strong>
+                    <strong>Circulars and Sitreps</strong>
                 </span>
             </h6>
             <div id="divrptcnt" class="reports">
