--- a/App.Web/Content/css/brac/site.css
+++ b/App.Web/Content/css/brac/site.css
@@ -4,6 +4,7 @@
     padding: 10px;
     z-index: 100000;
 }
+
 #divactivities > li {
     display: block;
     width: 100%;
@@ -17,4 +18,17 @@
     border: 0;
     border-bottom: 1px solid #e6e4e5;
     font-size: 12px;
+}
+
+#divactivities li .msg {
+    /*color: #D10D74;*/
+}
+
+    #divactivities li .msg a {
+        text-decoration: none;
+        color: #D10D74;
+    }
+
+#divactivities.dropdown-menu {
+    box-shadow: 0px 6px 15px #222;
 }
