--- a/App.Web/Views/Shared/_LayoutBrac.cshtml
+++ b/App.Web/Views/Shared/_LayoutBrac.cshtml
@@ -29,10 +29,8 @@
             <h2 class="bulletin-header">Enlighten</h2>
             <div id="bullentin">
                 <p>
-                    <span class="bullentin-item">ব্র্যাক আরো ১ কোটি টাকা ত্রাণ কার্যক্রমে দান করেছে</span>
-                    <span class="bullentin-item">ব্র্যাক আরো ১ কোটি টাকা ত্রাণ কার্যক্রমে দান করেছে</span>
-                    <span class="bullentin-item">ব্র্যাক আরো ১ কোটি টাকা ত্রাণ কার্যক্রমে দান করেছে</span>
-                    <span class="bullentin-item">ব্র্যাক আরো ১ কোটি টাকা ত্রাণ কার্যক্রমে দান করেছে</span>
+                    <span class="bullentin-item">Respected Colleagues, thank you for visiting. This platform is being heartened with regular analysis & heat maps. Please log in daily for new relevant updates. Thank you!</span>
+
 
                 </p>
             </div>
