--- a/App.Web/Views/Shared/_LayoutBrac.cshtml
+++ b/App.Web/Views/Shared/_LayoutBrac.cshtml
@@ -26,10 +26,10 @@
         </a>
 
         <div class="bullentin-wrapper">
-            <h2 class="bulletin-header">Enlighten</h2>
+            <h2 class="bulletin-header">Notice</h2>
             <div id="bullentin">
                 <p>
-                    <span class="bullentin-item">Respected Colleagues, thank you for visiting. This platform is being heartened with regular analysis & heat maps. Please log in daily for new relevant updates. Thank you!</span>
+                    <span class="bullentin-item">Respected Colleagues, thank you for visiting. This platform is being heartened with regular analysis and heat maps. Please log in daily for new relevant updates. Thank you!</span>
 
 
                 </p>
