--- a/App.Web/Content/css/brac/site.css
+++ b/App.Web/Content/css/brac/site.css
@@ -3,6 +3,7 @@
     min-width: 400px;
     padding: 10px;
     z-index: 100000;
+    margin-right:25px;
 }
 
 #divactivities > li {
@@ -31,4 +32,14 @@
 
 #divactivities.dropdown-menu {
     box-shadow: 0px 6px 15px #222;
+}
+
+.brac-link {
+    color: #D10D74;
+}
+
+@media screen and (min-width: 992px) {
+    #bullentin {
+        width: 600px !important;
+    }
 }
