--- a/App.Web/Views/Shared/_LayoutBrac.cshtml
+++ b/App.Web/Views/Shared/_LayoutBrac.cshtml
@@ -5,7 +5,11 @@
     <title>COVID-19 Response</title>
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <meta name="viewport" content="width=device-width" />
-    @Styles.Render("~/Content/brac")
+    @*@Styles.Render("~/Content/brac")*@
+
+    <link href="~/Content/css/brac/bundle.css" rel="stylesheet" />
+    <link href="~/Content/css/brac/site.css" rel="stylesheet" />
+
     <style type="text/css">
         .st0 {
         fill: none;
